eks/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: simple-bank-api-service

spec:
  # set so the service can find the set of pods to route the traffic to
  selector:
    app: simple-bank-api
  ports:
    - protocol: TCP
      # incoming requests
      port: 80
      # where the request is sent to
      # incoming requests comes to PORT:80 and forwarded to simple-bank-api:8080
      targetPort: 8080
  type: ClusterIP
